modified the tooltip text for parking lots
modified the tooltip text for parking lots

--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -105,22 +105,22 @@
                 <area target="" data-key="WayburneWD" class="bus" full ="" id="WayburneWD" building="WayburneWD" alt="WayburneWD" href="#" coords="3901,191,3941,231" shape="rect">
 
             <!-- Parking lots -->
-                <area target="" class="sparking" id="LOTA"   full="LOT A" building="LOTA"   lot-key="LOTA"    alt="LOT A"  title=""  href="#" coords="776,106,955,285" shape="rect">
-                <area target="" class="sparking" id="LOTB"   full="LOT B" building="LOTB"   lot-key="LOTB"    alt="LOT B"  title=""  href="#" coords="983,119,1234,205" shape="rect">
-                <area target="" class="sparking" id="LOTD"   full="LOT D" building="LOTD"   lot-key="LOTD"    alt="LOT D"  title=""  href="#" coords="1936,214,2190,367" shape="rect">
-                <area target="" class="sparking" id="LOTF"   full="LOT F" building="LOTF"   lot-key="LOTF"    alt="LOT F"  title=""  href="#" coords="2226,212,2487,363" shape="rect">
-                <area target="" class="sparking" id="LOTE"   full="LOT E" building="LOTE"   lot-key="LOTE"    alt="LOT E"  title=""  href="#" coords="1911,132,2501,186" shape="rect">
-                <area target="" class="sparking" id="LOTG"   full="LOT G" building="LOTG"   lot-key="LOTG"    alt="LOT G"  title=""  href="#" coords="2530,129,2863,175" shape="rect">
-                <area target="" class="sparking" id="LOTK"   full="LOT K" building="LOTK"   lot-key="LOTK"    alt="LOT K"  title=""  href="#" coords="2795,545,2870,749" shape="rect">
-                <area target="" class="sparking" id="LOTL"   full="LOT L" building="LOTL"   lot-key="LOTL"    alt="LOT L"  title=""  href="#" coords="2888,536,2888,761,3182,772,3185,697,3060,539" shape="poly">
-                <area target="" class="sparking" id="LOTJ"   full="LOT J" building="LOTJ"   lot-key="LOTJ"    alt="LOT J"  title=""  href="#" coords="2874,910,2809,810" shape="rect">
-                <area target="" class="sparking" id="LOTN"   full="LOT N" building="LOTN"   lot-key="LOTN"    alt="LOT N"  title=""  href="#" coords="3500,938,2687,934,2684,1009,2512,1031,2340,1059,2147,1153,2154,1181,2365,1095,2523,1067,2695,1049,3160,1052,3167,1024,3504,1024" shape="poly">
-                <area target="" class="sparking" id="LOTQ"   full="LOT Q" building="LOTQ"   lot-key="LOTQ"    alt="LOT Q"  title=""  href="#" coords="160,965,396,1180" shape="rect">
-                <area target="" class="sparking" id="LOTS"   full="LOT S" building="LOTS"   lot-key="LOTS"    alt="LOT S"  title=""  href="#" coords="2817,1285,2885,1349" shape="rect">
-                <area target="" class="sparking" id="LOTS2"  full="LOT S" building="LOTS2"  lot-key="LOTS2"   alt="LOT S2" title="" href="#" coords="2294,1382,2365,1460" shape="rect">
-                <area target="" class="sparking" id="LOTM"   full="LOT M" building="LOTM"   lot-key="LOTM"    alt="LOT M"  title=""  href="#" coords="3185,900,2913,832" shape="rect">
-                <area target="" class="sparking" id="LOTH"   full="LOT H" building="LOTH"   lot-key="LOTH"    alt="LOT H"  title=""  href="#" coords="2745,185,2860,396" shape="rect">
-                <area target="" class="sparking" id="LOTO"   full="LOT O" building="LOTO"   lot-key="LOTO"    alt="LOT O"  title=""  href="#" coords="3411,483,3597,487,3708,540,3615,694" shape="poly">
+                <area target="" class="sparking" id="LOTA"   full="Student Parking LOT A" building="LOTA"   lot-key="LOTA"    alt="LOT A"  title=""  href="#" coords="776,106,955,285" shape="rect">
+                <area target="" class="sparking" id="LOTB"   full="Student Parking LOT B" building="LOTB"   lot-key="LOTB"    alt="LOT B"  title=""  href="#" coords="983,119,1234,205" shape="rect">
+                <area target="" class="sparking" id="LOTD"   full="Student Parking LOT D" building="LOTD"   lot-key="LOTD"    alt="LOT D"  title=""  href="#" coords="1936,214,2190,367" shape="rect">
+                <area target="" class="sparking" id="LOTF"   full="Student Parking LOT F" building="LOTF"   lot-key="LOTF"    alt="LOT F"  title=""  href="#" coords="2226,212,2487,363" shape="rect">
+                <area target="" class="sparking" id="LOTE"   full="Student Parking LOT E" building="LOTE"   lot-key="LOTE"    alt="LOT E"  title=""  href="#" coords="1911,132,2501,186" shape="rect">
+                <area target="" class="sparking" id="LOTG"   full="Student Parking LOT G" building="LOTG"   lot-key="LOTG"    alt="LOT G"  title=""  href="#" coords="2530,129,2863,175" shape="rect">
+                <area target="" class="sparking" id="LOTK"   full="Student Parking LOT K" building="LOTK"   lot-key="LOTK"    alt="LOT K"  title=""  href="#" coords="2795,545,2870,749" shape="rect">
+                <area target="" class="sparking" id="LOTL"   full="Student Parking LOT L" building="LOTL"   lot-key="LOTL"    alt="LOT L"  title=""  href="#" coords="2888,536,2888,761,3182,772,3185,697,3060,539" shape="poly">
+                <area target="" class="sparking" id="LOTJ"   full="Student Parking LOT J" building="LOTJ"   lot-key="LOTJ"    alt="LOT J"  title=""  href="#" coords="2874,910,2809,810" shape="rect">
+                <area target="" class="sparking" id="LOTN"   full="Student Parking LOT N" building="LOTN"   lot-key="LOTN"    alt="LOT N"  title=""  href="#" coords="3500,938,2687,934,2684,1009,2512,1031,2340,1059,2147,1153,2154,1181,2365,1095,2523,1067,2695,1049,3160,1052,3167,1024,3504,1024" shape="poly">
+                <area target="" class="sparking" id="LOTQ"   full="Student Parking LOT Q" building="LOTQ"   lot-key="LOTQ"    alt="LOT Q"  title=""  href="#" coords="160,965,396,1180" shape="rect">
+                <area target="" class="sparking" id="LOTS"   full="Student Parking LOT S" building="LOTS"   lot-key="LOTS"    alt="LOT S"  title=""  href="#" coords="2817,1285,2885,1349" shape="rect">
+                <area target="" class="sparking" id="LOTS2"  full="Student Parking LOT S" building="LOTS2"  lot-key="LOTS2"   alt="LOT S2" title="" href="#" coords="2294,1382,2365,1460" shape="rect">
+                <area target="" class="sparking" id="LOTM"   full="Student Parking LOT M" building="LOTM"   lot-key="LOTM"    alt="LOT M"  title=""  href="#" coords="3185,900,2913,832" shape="rect">
+                <area target="" class="sparking" id="LOTH"   full="Student Parking LOT H" building="LOTH"   lot-key="LOTH"    alt="LOT H"  title=""  href="#" coords="2745,185,2860,396" shape="rect">
+                <area target="" class="sparking" id="LOTO"   full="Student Parking LOT O" building="LOTO"   lot-key="LOTO"    alt="LOT O"  title=""  href="#" coords="3411,483,3597,487,3708,540,3615,694" shape="poly">
             <!-- student housing parking-->
                 <area target="" class="parking" id="house"  full="Student Housing Parking" building="house"  parking-key="Student Housing Parking"  alt="STUDENT HOUSING PARKING" title="" href="#" coords="2333,976,2344,1048,2530,1015,2673,997,2681,915,2509,933" shape="poly">
             <!-- accessible parking icons-->
