--- a/public/css/academic-buildings-stylesheet.css
+++ b/public/css/academic-buildings-stylesheet.css
@@ -1,3 +1,8 @@
+html, body {
+    overflow-x: hidden;
+    height: 100%;
+}
+
 area { 
   display: none;
 }
@@ -54,4 +59,8 @@ area {
 
 .mapster_tooltip {
   pointer-events: none;
+}
+
+.campus-map {
+    display: none;
 }
