Bike repair changes made
Bike repair changes made

--- a/views/basic-nav.hbs
+++ b/views/basic-nav.hbs
@@ -54,7 +54,7 @@
                     <button onclick="toggleDisplay(this)" value="bike_overlay">Bicycle Route Information</button>
                 </div> --}}
                 <button onclick="toggleAccessibility()">Accessibility Routes</button>
-                <button class="dropdown-btn" onclick="toggleDropdown(this)">Parking Information
+                <button class="dropdown-btn" onclick="toggleDropdown(this)">Parking and Biking Information
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-container" >
@@ -66,7 +66,7 @@
                     <button onclick="toggleShareParking()">Carshare Parking</button>
                     <button onclick="togglePaystation()">Pay Station</button>
                     <button onclick="toggleMotorcycle()">Motorcycle Area</button>
-                    <button onclick="toggleBikeRepair()">Bike Repair</button>
+                    <button onclick="toggleBikeRepair()">Bike Lockers and Repair Stations</button>
                 </div>
             </div>
         </div>
