--- a/views/academic-buildings.hbs
+++ b/views/academic-buildings.hbs
@@ -11,6 +11,7 @@
     </div>
     <div id="map_area" class="col-sm-10">
         {{>overlay}}
+        <p id="details_box">Hover over the buildings for more information.</p>
         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
     </div>
 </div>
