--- a/views/basic-nav.hbs
+++ b/views/basic-nav.hbs
@@ -76,6 +76,15 @@
         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
     </div>
 </div>
+<div id="loading" class="d-flex justify-content-center align-items-center" style="height: 100%">
+    <div class="spinner-border" style="width: 6rem; height: 6rem;" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
+
+<script src="/panzoom/panzoom.js"></script>
+<script src="js/zoom.js"></script>
+<script src="js/basic.js"></script>
 
 <script>
     var dropdown = document.getElementsByClassName("dropdown-btn");
