Rearranged nav bar to be below map on all pages

--- a/views/other-key-places.hbs
+++ b/views/other-key-places.hbs
@@ -2,14 +2,12 @@
     Other Key Places
 </div>
 <div id="campus-map" class="campus-map">
-    <div class="col-sm-2">
-        <div class="sidenav">
-            <div id="sidenav" class="sidenav-cont">
-                {{!-- button here --}}
-            </div>
+    <div class="sidenav">
+        <div id="sidenav" class="sidenav-cont">
+            {{!-- button here --}}
         </div>
     </div>
-    <div id="map_area" class="col-sm-10">
+    <div id="map_area" class="mapsection">
         {{>overlay}}
         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
     </div>
