--- a/public/css/all-nav-stylesheet.css
+++ b/public/css/all-nav-stylesheet.css
@@ -1,5 +1,10 @@
 body {
     overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+html {
+    overflow-y: hidden;
 }
 
 .heading {
@@ -45,19 +50,21 @@ body {
     opacity: 0.5;
 }
 
-.col-sm-2 {
+.sidenav {
   background-color: white;
-  height: 450px;
+  height: 220px;
   width: 180px;
   z-index: 1;
   left: 0;
   overflow-x: hidden;
+  overflow-y: scroll;
   padding: 10px 5px 0 5px;
+  margin-top: 300px;
   position: absolute;
   border-right: 1px solid #869cb0;    
 }
 
-.col-sm-2 button {
+.sidenav button {
   color: white;
   background-color: #003c71;
   margin-bottom: 5px;
@@ -72,13 +79,13 @@ body {
   outline: none;
 }
 
-.col-sm-2 button:hover {
+.sidenav button:hover {
     background-color: #003c71;
     opacity: 0.5;
 }
 
-.col-sm-10 {
-    margin-left: 105px;
+.mapsection {
+    margin-left: 0;
     margin-right: 0;
     padding: 0;
 }
@@ -103,40 +110,7 @@ body {
     font-size: 180%;
 }
 
-/*
-.dropdown-container {
-    background-color: rgba(0, 60, 113, 0.4);
-    opacity: 0.7;
-}
-*/
-
-
 .active:hover{
     background-color: rgba(53, 164, 255, 0.6);
     opacity: 1;
 }
-
-/*
-.dropdown-container button:hover{
-    background-color: rgba(53, 164, 255, 0.6);
-    opacity: 1;
-}
-*/
-
-/*
-#details_box {
-    background-color: #ffea2e;
-    color: #003c71;
-    font-size: 10px;
-}
-
-#details_box::after {
-    position: fixed;
-    display: block;
-    bottom: 0px;
-}
-
-#details_title::after {
-    font-size: 10px;
-    font-weight: bold;
-}*/
