--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -196,7 +196,7 @@
         </div>
     </div>
 </div>
-<div id="details_box" class="col-lg-12">
+<div id="details_box" class="col-lg-12" style="margin-left: 180px; width: 510px;">
     <h3 id="details_title"></h3>
     <p id="details_info"></p>
     <a id="details_link"></a>
