--- a/views/services-supports.hbs
+++ b/views/services-supports.hbs
@@ -2,13 +2,11 @@
     Campus Services
 </div>
 <div id="campus-map" class="campus-map">
-    <div class="col-sm-2">
-        <div class="sidenav">
-            <div id="sidenav" class="sidenav-cont">   
-            </div>
+    <div class="sidenav">
+        <div id="sidenav" class="sidenav-cont">   
         </div>
     </div>
-    <div class="col-sm-10">
+    <div class="mapsection">
         {{>overlay}}
         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
     </div>
