--- a/views/academic-buildings.hbs
+++ b/views/academic-buildings.hbs
@@ -2,12 +2,14 @@
     Academic Buildings
 </div>
 <div id="campus-map" class="campus-map">
-    <div class="sidenav">
-        <div id="sidenav" class="sidenav-cont">  
-            {{!-- button here --}}
+    <div class="col-sm-2">
+        <div class="sidenav">
+            <div id="sidenav" class="sidenav-cont">  
+                {{!-- button here --}}
+            </div>
         </div>
     </div>
-    <div id="map_area" class="mapsection">
+    <div id="map_area" class="col-sm-10">
         {{>overlay}}
         <p id="details_box">Hover over the buildings for more information.</p>
         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
