--- a/views/services-supports.hbs
+++ b/views/services-supports.hbs
@@ -2,11 +2,13 @@
     Campus Services
 </div>
 <div id="campus-map" class="campus-map">
-    <div class="sidenav">
-        <div id="sidenav" class="sidenav-cont">   
+    <div class="col-sm-2">
+        <div class="sidenav">
+            <div id="sidenav" class="sidenav-cont">   
+            </div>
         </div>
     </div>
-    <div class="mapsection">
+    <div class="col-sm-10">
         {{>overlay}}
         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
     </div>
