--- a/views/finish.hbs
+++ b/views/finish.hbs
@@ -3,7 +3,7 @@
     <div id="finish-msg">
         Congratulations! You have now learned the basics of navigating BCIT's Burnaby Campus!<br><br>
         Use what you learned in this activity to help orient yourself on campus during your first days at school!<br>
-        <button onclick="start()">RESTART ></button>
-        <button>FINISH ></button>
     </div>
 </div>
+<button onclick="start()" id="restart-btn">RESTART ></button>
+<button id="finish-btn">FINISH ></button>
