Updated wording in main menu page

--- a/views/main-menu.hbs
+++ b/views/main-menu.hbs
@@ -12,8 +12,8 @@
       <button onclick="finish()" name="otherKeyPlaces">FINISH ></button>
     </div>
     <div class="col-sm-7">
-      Finding your way around any new place can be difficult and BCIT is no different. While the best way to learn to navigate campus is to do it every day, this activity will help you learn the basics before you even arrive!<br><br>
-      Explore each of the sections on the left to get familiar with our campus layout, important buildings and services, and to learn some of current students' favourite places.<br><br>
+      Finding your way around any new place can be challenging. While the best way to learn to navigate campus is to do it every day, this activity will help you learn the basics of navigating the Burnaby campus before you even arrive!<br><br>
+      Explore each of the sections on the left to get familiar with our campus layout, important buildings and services, and to learn about some of current students' favourite places.<br><br>
       <i>Not going to be on campus? Many campus services and supports are still available to you!</i>
     </div>
   </div>
