--- a/public/css/academic-buildings-stylesheet.css
+++ b/public/css/academic-buildings-stylesheet.css
@@ -75,5 +75,10 @@ area {
     color: #003c71;
     font-size: 10px;
     width: 585px;
-    text-align: center;
+    text-align: left;
+    padding: 10px 0 0 10px;
+    position: absolute; 
+    top: 0;
+    height: 150px;
+    margin-top: 250px;
 }
